fix: legend does not expand on mobile-grade screens

--- a/resources/main.less
+++ b/resources/main.less
@@ -24,7 +24,7 @@
         }
 
         .datamap-container-legend {
-            width: 22em;
+            width: 23em;
             max-height: 750px;
             box-sizing: border-box;
             overflow-y: auto;
@@ -39,7 +39,11 @@
 
             .datamap-container-legend {
                 width: auto;
-                max-height: 300px;
+                height: 300px;
+
+                .datamap-container-groups {
+                    column-width: 13em;
+                }
             }
         }
     }
